kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
  annotations:
    authentik.home.arpa/forward-auth: "true"
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames: ["alertmanager.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
  annotations:
    authentik.home.arpa/forward-auth: "true"
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames: ["prometheus.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
